common-applications/test-environment/email-auth/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: email-auth
  name: email-auth
