common-applications/test-environment/email-auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: email-auth
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: email-auth
      component: api-backend
  template:
    metadata:
      labels:
        app: email-auth
        component: api-backend
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
        - name: email-auth
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/email-auth/email-auth-api:master-3c35b46
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
