common-applications/test-environment/email-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-auth
  namespace: email-auth
spec:
  ports:
  - name: httpport
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: email-auth
  type: ClusterIP
